[metadata]
name = pywhoami
version = attr: pywhoami.__version__
author = Tom Saunders
license = MIT
license_files = LICENSE
description = A Simple HTTP Request Analysis Server
url = https://github.com/sirfuzzalot/pywhoami
project_urls =
    Tracker = https://github.com/sirfuzzalot/pywhoami/issues
    Documentation = https://github.com/sirfuzzalot/pywhoami
    Source = https://github.com/sirfuzzalot/pywhoami
classifiers =
    Development Status :: 4 - Beta
    Framework :: AsyncIO
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Software Development
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    Hypercorn == 0.13.2
    Quart == 0.17.0

[options.packages.find]
where = src
